Fixed alignment of buttons on 'Edit Expense' form page using flex

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -2,16 +2,21 @@
 
 :root {
     --brand-primary: #070eff8a;
-    --brand-secondary: #F1D302;
-    --brand-accent: #77afff;   
-    --brand-dark: #3A4454;      
-    --brand-light: #F9FAFC;     
+    --brand-secondary: #E62C03;
+    --brand-accent: #77afff;
+    --brand-dark: #3A4454;
+    --brand-light: #F9FAFC;
+    --brand-alt: #0dcaf0;
 }
 
 .brand-primary {
-    background-color: var(--brand-primary);
+    background-color: var(--brand-alt);
     /* margin-bottom: 0 !important;
     padding-bottom: 0 !important; */
+}
+
+.brand-secondary {
+    background-color: var(--brand-secondary);
 }
 
 .brand-light {
@@ -24,25 +29,32 @@
 
 
 .button--orange {
-    background-color:#E84610;
+    background-color: #E84610;
 }
 
-.brand-2 {
-    background-color: var(--brand-primary);
+.brand-text-primary {
+    color: var(--brand-primary);
 }
 
-html, body {
+html,body
+{
+    width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 body {
-    background-color: var(--brand-primary);
-    
+    background-color: var(--brand-alt);
 }
 
 .header-white {
     color: #ffffff;
+    
 }
+
+
 
 /* main {
     margin-bottom: 0 !important;
@@ -81,7 +93,7 @@ body {
 }
 
 .main-bg {
-    background-color: var(--brand-primary);
+    background-color: var(--brand-alt);
 }
 
 /* .card {
@@ -98,7 +110,8 @@ body {
     bottom: 5%;
     min-width: 30%;
     left: -2px;
-    background-color: #188181;
+    background-color: initial;
+    background-image: linear-gradient(-180deg, #FF7E31, #E62C03);
 }
 
 .scale {
@@ -254,7 +267,8 @@ footer .nav-link:focus {
 /* Expense Line Summary */
 
 .line-initials {
-    background-color: #E84610;
+    background-color: #E62C03;
+    background-image: linear-gradient(-180deg, #FF7E31, #E62C03);
     color: #ffffff;
     width: 40px;
     height: 40px;
@@ -343,7 +357,7 @@ footer .nav-link:focus {
 /* contribution table */
 
 .table-scroll {
-    overflow-x: auto;       
+    overflow-x: auto;
 }
 
 .table-data-center {
@@ -374,7 +388,7 @@ td {
 
 /* General Form Styling */
 
-form label{
+form label {
     color: #FFFFFF
 }
 
@@ -396,7 +410,7 @@ form label{
     color: #FFFFFF;
     cursor: pointer;
     display: inline-block;
-    font-family: Inter,-apple-system,system-ui,Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-family: Inter, -apple-system, system-ui, Roboto, "Helvetica Neue", Arial, sans-serif;
     height: 40px;
     line-height: 40px;
     outline: 0;
@@ -413,16 +427,16 @@ form label{
     z-index: 9;
     border: 0;
     transition: box-shadow .2s;
-  }
-  
-  .btn--orange:hover {
+}
+
+.btn--orange:hover {
     color: #FFFFFF;
     box-shadow: rgba(253, 76, 0, 0.5) 0 3px 8px;
-  }
+}
 
-  .btn--orange:active {
-    color:#FFFFFF;
-  }
+.btn--orange:active {
+    color: #FFFFFF;
+}
 
 /* @media only screen and (min-width: 768px) {
     
